Corrected header spacings beneath the logo

--- a/static/scss/PUB/_Component_navbar-inline.scss
+++ b/static/scss/PUB/_Component_navbar-inline.scss
@@ -1,6 +1,6 @@
 .navbar-qp {
     padding-top: 30px;
-    padding-bottom: 24px;
+    padding-bottom: 34px;
 	-webkit-transition: padding 0.2s ease-in;
 	-moz-transition: padding 0.2s ease-in;
 	-o-transition: padding 0.2s ease-in;
@@ -185,6 +185,6 @@
 body.fixedscroll .qp-header {
 	.navbar-qp {
 	    padding-top: 12px;
-		padding-bottom: 14px;
+		padding-bottom: 16px;
 	}
 }
